__init__.pyc changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fresh Tomatoes!</title>
+    <title>Movie Trailer Website - Montasser Ghachem </title>
 
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
@@ -44,62 +44,6 @@
       </div>
       <div class="container">
          
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="QNNcl2mEHzQ" data-title="The Outsider" data-storyline="An epic set in post-WWII Japan and centered on an American former G.I. who joins the yakuza."
-        data-director="MARTIN ZANDVLIET" data-imdb="tt2011311" data-genres="CRIME,DRAMA,MYSTERY"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/outsider2018.jpg" width="220" height="342">
-            <h3>The Outsider</h3>
-</div>
-
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="_lpuc162YpI" data-title="The Forgiven" data-storyline="After the end of Apartheid, Archbishop Desmond Tutu meets with a brutal murderer seeking redemption."
-        data-director="ROLAND JOFFE" data-imdb="tt2249081" data-genres="THRILLER"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/forgiven.jpg" width="220" height="342">
-            <h3>The Forgiven</h3>
-</div>
-
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="vc0fb3xhFHY" data-title="The Week Of" data-storyline="The parents of a soon-to-be married couple make the final preparations for the wedding ceremony."
-        data-director="ROBERT SMIGEL" data-imdb="tt6821012" data-genres="COMEDY"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/weekof.jpg" width="220" height="342">
-            <h3>The Week Of</h3>
-</div>
-
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="UEhsFEgsI5U" data-title="Fahrenheit 451" data-storyline="In a terrifying care-free future, a young man, Guy Montag, whose job as a fireman is to burn all books, questions his actions after meeting a young girl...and begins to rebel against society."
-        data-director="RAMIN BAHRANI" data-imdb="tt0360556" data-genres="DRAMA, SCI-FI"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/fahrenheit451.jpg" width="220" height="342">
-            <h3>Fahrenheit 451</h3>
-</div>
-
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="scI7dYdlzuY" data-title="Paterno" data-storyline="The film centers on Joe Paterno, who, after becoming the winningest coach in college football history, is embroiled in Penn State's Jerry Sandusky sexual abuse scandal, challenging his legacy and forcing him to face questions of institutional failure regarding the victims."
-        data-director="BARRY LEVINSON" data-imdb="tt2388986" data-genres="BIOGRAPHY, DRAMA"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/paterno.jpg" width="220" height="342">
-            <h3>Paterno</h3>
-</div>
-
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="9DH1saMDuzs" data-title="Little Pink House" data-storyline="A small-town nurse named Susette Kelo emerges as the reluctant leader of her working-class neighbors in their struggle to save their homes from political and corporate interests bent on seizing the land and handing it over to Pfizer Corporation."
-        data-director="COURTNEY BALAKER" data-imdb="tt3863632" data-genres="DRAMA"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/littlepinkhouse.jpg" width="220" height="342">
-            <h3>Little Pink House</h3>
-</div>
-
-<div class="col-md-6 col-lg-3 movie-tile text-center"
-        data-trailer-youtube-id="ri1Cc3Yz09U" data-title="Action Point" data-storyline="A daredevil designs and operates his own theme park with his friends."
-        data-director="TIM KIRKBY" data-imdb="tt6495770" data-genres="COMEDY"
-        data-toggle="modal" data-target="#trailer">
-            <img src="https://www.movie-list.com/img/posters/big/actionpoint.jpg" width="220" height="342">
-            <h3>Action Point</h3>
-</div>
-
 <div class="col-md-6 col-lg-3 movie-tile text-center"
         data-trailer-youtube-id="QNNcl2mEHzQ" data-title="The Outsider" data-storyline="An epic set in post-WWII Japan and centered on an American former G.I. who joins the yakuza."
         data-director="MARTIN ZANDVLIET" data-imdb="tt2011311" data-genres="CRIME,DRAMA,MYSTERY"
